--- a/css/main.css
+++ b/css/main.css
@@ -47,17 +47,29 @@ a {
   background-color: #fb565a;
 }
 
+.container {
+  width: 1160px;
+  margin: 0 auto;
+}
+
 .main-header {
   background-color: #eeeeee;
 }
 
 .main-navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 50px;
   font-size: 16px;
   font-weight: medium;
   line-height: 30px;
 }
 
 .menu-list {
+  display: flex;
+  justify-content: space-between;
+  width: 440px;
   list-style: none;
 }
 
@@ -76,6 +88,14 @@ a {
 .main-navigation a:nth-child(3) {
   color: #000000;
   border-bottom: 2px solid #fb565a;
+}
+
+.menu-item {
+  text-transform: uppercase;
+}
+
+.slider-list {
+  display: flex;
 }
 
 .carousel {
@@ -157,6 +177,21 @@ a {
   color: #edc47f;
 }
 
+.basket {
+  width: 160px;
+}
+
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.features-item {
+  width: 300px;
+}
+
 .features-item-red {
   background-image: url("../img/illustration-1.png");
   background-position: center;
@@ -175,10 +210,24 @@ a {
   background-repeat: no-repeat;
 }
 
+.description {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 120px;
+}
+
+.description-list {
+  width: 660px;
+}
+
 .description-list .cry {
   font-size: 45px;
   line-height: 45px;
   font-weight: medium;
+}
+
+.statistics {
+  width: 360px;
 }
 
 .job {
@@ -187,6 +236,8 @@ a {
 }
 
 .offers-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -198,6 +249,11 @@ a {
 }
 
 .logo-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  margin-top: 120px;
+  padding: 0;
   list-style: none;
 }
 
@@ -207,6 +263,12 @@ a {
   background-repeat: no-repeat;
 }
 
+.modal-contacts {
+  width: 320px;
+  margin: 50px;
+  background-color: #ffffff;
+}
+
 b.benefit {
   font-size: 36px;
   line-height: 36px;
@@ -214,15 +276,21 @@ b.benefit {
 }
 
 .social-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 .social {
+  width: 265px;
+  width: 80px;
+  height: 80px;
   font-size: 5px;
   line-height: 5px;
   font-family: bold;
   color: #ffffff;
   background-color: #e1e1e1;
+  border-radius: 50%;
 }
 
 .social-vk {
@@ -284,6 +352,31 @@ b.benefit {
   color: #fb565a;
 }
 
+.container-cataloge {
+  display: flex;
+  justify-content: space-between;
+}
+
+.container-item-sorting {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.container-item-sorting p {
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: bold;
+}
+
+h1.caption {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.main-form {
+  width: 260px;
+}
+
 .grid b {
   font-size: 18px;
   line-height: 30px;
@@ -310,6 +403,10 @@ input[type="checkbox"]:hover {
   color: #4d4d4d;
 }
 
+.container-item {
+  width: 760px;
+}
+
 .link-show {
   color: #000000;
   background-color: #eeeeee;
@@ -326,6 +423,8 @@ input[type="checkbox"]:hover {
 }
 
 .sorting {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -354,6 +453,10 @@ input[type="checkbox"]:hover {
 }
 
 .services {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
   list-style: none;
 }
 
@@ -379,6 +482,12 @@ input[type="checkbox"]:hover {
 .information:hover {
   display: block;
   background-color: #eeeeee;
+}
+
+.pages-list {
+  margin: 0 auto;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .pages-list a {
