--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,24 @@
 @font-face {
   font-family: "Roboto";
-  src: local("Roboto-Regular"),
-       url("../fonts/Roboto.woff") format("woff"),
-       url("../fonts/Roboto.woff2") format("woff2");
+  src: local("roboto"),
+       url("../fonts/roboto.woff") format("woff"),
+       url("../fonts/roboto.woff2") format("woff2");
        font-weight: 400;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: local("Robotobold"),
-       url("../fonts/Robotobold.woff") format("woff"),
-       url("../fonts/Robotobold.woff2") format("woff2");
-       font-weight; 700;
+  src: local("robotobold"),
+       url("../fonts/robotobold.woff") format("woff"),
+       url("../fonts/robotobold.woff2") format("woff2");
+       font-weight: 700;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: local("Robotomedium"),
-       url("../fonts/Robotomedium.woff") format("woff"),
-       url("../fonts/Robotomedium.woff2") format("woff2");
+  src: local("robotomedium"),
+       url("../fonts/robotomedium.woff") format("woff"),
+       url("../fonts/robotomedium.woff2") format("woff2");
        font-weight: 500;
 }
 
@@ -53,6 +53,7 @@ a {
 }
 
 .link {
+  padding: 15px 50px;
   font: inherit;
   text-transform: uppercase;
   text-align: center;
@@ -82,6 +83,10 @@ a {
 
 .menu-list {
   display: flex;
+  margin: 0;
+  padding: 0;
+  padding-top: 15px;
+  align-items: center;
   justify-content: space-between;
   width: 440px;
   list-style: none;
@@ -108,11 +113,18 @@ a {
   text-transform: uppercase;
 }
 
+.menu-item .basket {
+  display: block;
+  padding-top: 27px;
+}
+
 .slider-list {
   display: flex;
 }
 
 .carousel {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -123,19 +135,29 @@ a {
   color: #000000;
 }
 
+.carousel-item {
+  display: block;
+}
+
 .carousel .red {
+  width: 698px;
+  height: 413px;
   background-image: url("../img/slide1.png");
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .carousel .green {
+  width: 663px;
+  height: 430px;
   background-image: url("../img/slide2.png");
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .carousel .red {
+  width: 759px;
+  height: 413ppx;
   background-image: url("../img/slide3.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -143,26 +165,14 @@ a {
 
 .link-list:hover {
   color: #ffffff;
+  background-color: #e74246;
 }
 
 .link-list:active {
-  color: #e48789;
 }
 
 .features-list {
   list-style: none;
-}
-
-.link-list {
-  color: #ffffff;
-}
-
-.link-list:hover {
-  color: #ffffff;
-}
-
-.link-list:active {
-  color: #e48789;
 }
 
 .link-green {
@@ -172,10 +182,10 @@ a {
 
 .link-green:hover {
   color: #ffffff;
+  background-color: #00bc6c;
 }
 
 .link-green:active {
-  color: #74c69c;
 }
 
 .link-yellow {
@@ -185,10 +195,10 @@ a {
 
 .link-yellow:hover {
   color: #ffffff;
+  background-color: #eab534;
 }
 
 .link-yellow:active {
-  color: #edc47f;
 }
 
 .basket {
@@ -287,17 +297,19 @@ a {
   list-style: none;
 }
 
-.logo-item a {
+.logo-item {
   width: 260px;
   height: 180px;
   vertical-align: middle;
 }
 
-.logo-item a:first-child {
-  align-items: baseline;
+.logo-link {
+  display: block;
 }
 
 .modal {
+  width: 100%;
+  height: 415px;
   background-image: url("../img/maps.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -324,46 +336,45 @@ b.benefit {
 }
 
 .social-list {
+  display: flex;
+  justify-content: space-between;
   width: 270px;
   margin: 0;
+  margin-right: 130px;
   padding: 0;
   list-style: none;
 }
 
 .social {
-  display: inline-block;
+  display: block;
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
   font-size: 5px;
   line-height: 5px;
   font-family: bold;
   color: #ffffff;
   border-radius: 50%;
+  background-color: #e1e1e1;
+  vertical-align: middle;
 }
 
 .social-vk {
-  width: 80px;
-  height: 80px;
   background-image: url("../img/vk-icon.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #e1e1e1;
 }
 
 .social-fb {
-  width: 80px;
-  height: 80px;
   background-image: url("../img/fb-icon.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #e1e1e1;
 }
 
 .social-in {
-  width: 80px;
-  height: 80px;
   background-image: url("../img/insta-icon.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #e1e1e1;
 }
 
 .social:hover {
@@ -417,6 +428,7 @@ b.benefit {
   justify-content: space-between;
   align-items: flex-end;
 }
+
 .container-item-sorting p {
   font-size: 18px;
   line-height: 18px;
@@ -428,9 +440,6 @@ h1.caption {
   vertical-align: middle;
 }
 
-.services-list {
-  padding-bottom: 33px;
-}
 .main-form {
   width: 260px;
 }
@@ -487,6 +496,12 @@ input[type="checkbox"]:hover {
   list-style: none;
 }
 
+.sorting-link {
+  display: block;
+  padding-right: 25px;
+  color: #000000;
+  opacity: 0.1;
+}
 
 .sorting-up {
   width: 12px;
@@ -494,7 +509,8 @@ input[type="checkbox"]:hover {
   background-image: url("../img/icon-up-dir.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #a6a6a6;
+  color: #000000;
+  opacity: 0.1;
 }
 
 .sorting-down {
@@ -503,23 +519,38 @@ input[type="checkbox"]:hover {
   background-image: url("../img/icon-down-dir.svg");
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #a6a6a6;
-}
-
-.sorting-list {
-  padding-right: 25px;
-}
-
-.sorting-list a {
-  color: #cacaca;
-}
-
-.sorting-list a:hover {
-  color: #8d8d8d;
-}
-
-.sorting-list a:active {
   color: #000000;
+  opacity: 0.1;
+}
+
+.sorting-link:hover {
+  color: #000000;
+  opacity: 0.5;
+}
+
+.sorting-link:active {
+  color: #000000;
+  opacity: 0.8;
+}
+
+.sorting-up:hover {
+  color: #000000;
+  opacity: 0.5;
+}
+
+.sorting-up:active {
+  color: #000000;
+  opacity: 0.8;
+}
+
+.sorting-down:hover {
+  color: #000000;
+  opacity: 0.5;
+}
+
+.sorting-down:active {
+  color: #000000;
+  opacity: 0.8;
 }
 
 .services {
@@ -530,11 +561,21 @@ input[type="checkbox"]:hover {
   list-style: none;
 }
 
+.services-list {
+  padding-bottom: 33px;
+}
+
 .points {
-  color: #e9e9e9;
+  width: 360px;
+  height: 35px;
   background-image: url("../img/browser.svg");
   background-position: top;
   background-repeat: no-repeat;
+  opacity: 0.1;
+}
+
+.points:active {
+  opacity: 1;
 }
 
 .information h2 {
