--- a/css/main.css
+++ b/css/main.css
@@ -626,6 +626,7 @@ a {
 }
 
 .modal {
+  position: relative;
   display: block;
   height: 415px;
   background-image: url("../img/maps.jpg");
@@ -633,7 +634,13 @@ a {
   background-repeat: no-repeat;
 }
 
+iframe {
+  position: absolute;
+}
+
 .container-form {
+  position: absolute;
+  z-index: 1;
   padding-top: 55px;
 }
 
@@ -749,7 +756,7 @@ b.benefit {
 .social:active {
   color: #e37376;
   background-color: #d7373b;
-  box-shadow:inset 0 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .container-cataloge {
