--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,6 @@ a {
 }
 
 .link {
-  padding: 15px 50px;
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
@@ -69,7 +68,7 @@ a {
 .link:active {
   background-color: #d7373b;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 2px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .container {
@@ -127,11 +126,11 @@ a {
   color: #000000;
 }
 
-.main-navigation a:hover {
+.main-navigation a[href]:hover {
   color: #fb565a;
 }
 
-.main-navigation a:active {
+.main-navigation a[href]:active {
   color:#bdbdbd;
 }
 
@@ -320,10 +319,10 @@ a {
 .button:active {
   background-color: #d7373b;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 2px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
-.main-item {
+.features {
   padding-top: 79px;
 }
 
@@ -387,8 +386,8 @@ a {
 
 .features-item .link-color {
   display: block;
-  width: 81px;
-  padding: 13px 40px;
+  width: 140px;
+  padding: 13px 10px;
   color: #ffffff;
   border-radius: 3px;
 }
@@ -396,7 +395,7 @@ a {
 .link-red:active {
   background-color: #d7373b;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 2px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .link-green {
@@ -411,7 +410,7 @@ a {
 .link-green:active {
   background-color: #00aa62;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 2px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .link-yellow {
@@ -426,12 +425,13 @@ a {
 .link-yellow:active {
   background-color: #e5a722;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 2px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .description {
   display: flex;
   justify-content: space-between;
+  position: relative;
   border-bottom: 2px solid #eeeeee;
 }
 
@@ -455,16 +455,16 @@ a {
   line-height: 24px;
 }
 
-.description-list b.Job {
+.description-list b.job {
   display: block;
-  margin-bottom: 14px;
+  margin-bottom: 24px;
   text-transform: uppercase;
 }
 
 .description::after {
   content: "";
   position: absolute;
-  width: 1160px;
+  width: 100%;
   height: 2px;
   background-color: #eeeeee;
 }
@@ -506,11 +506,10 @@ a {
 
 .offers-list li::before {
   display: block;
-  position: relative;
-  top: 11px;
-  left: -35px;
+  position: absolute;
+  top: 9px;
+  left: 0px;
   content: "";
-  margin-top: 7px;
   width: 26px;
   height: 2px;
   text-align: center;
@@ -518,7 +517,8 @@ a {
 }
 
 .offers-list li {
-  margin-bottom: 16px;
+  position: relative;
+  margin-bottom: 24px;
   padding-left: 36px;
 }
 
@@ -562,6 +562,7 @@ a {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: relative;
   margin: 0;
   padding: 0;
   background-position: center;
@@ -570,7 +571,7 @@ a {
 
 .logo-list img.logo-link-one {
   display: block;
-  padding: 55px 30px;
+  padding: 62px 30px 50px;
 }
 
 .logo-item {
@@ -582,11 +583,12 @@ a {
 }
 
 .logo-link-one img {
-  padding: 55px 30px;
+  padding: 62px 30px 50px;
 }
 
 .logo-link {
   display: block;
+  margin: auto;
   opacity: 0.2;
 }
 
@@ -603,26 +605,16 @@ a {
   opacity: 0.1;
 }
 
-.logo-item a::after {
+li.logo-item::after {
   display: block;
   content: "";
-  position: relative;
-  top: -85px;
-  left: -40px;
+  position: absolute;
+  top: 88px;
+  left: 254px;
   width: 50px;
   height: 2px;
-  text-align: center;
   background-color: #eeeeee;
   transform: rotate(90deg);
-}
-
-.logo-list li:nth-child(1) a::after {
-  border: none;
-  background-color: #ffffff;
-}
-
-.logo-item a:hover::after {
-  background-color: #000000;
 }
 
 .modal {
@@ -639,12 +631,13 @@ iframe {
 }
 
 .container-form {
-  position: absolute;
+  position: relative;
   z-index: 1;
   padding-top: 55px;
 }
 
 .modal-contacts {
+  position: absolute;
   padding: 33px 50px;
   padding-bottom: 47px;
   width: 219px;
@@ -666,8 +659,8 @@ iframe {
 
 .modal-contacts a.link-modal {
   display: block;
-  width: 131px;
-  padding: 13px 44px;
+  width: 199px;
+  padding: 13px 10px;
   border-radius: 2px;
 }
 
@@ -724,44 +717,45 @@ b.benefit {
   padding: 0;
   font-size: 5px;
   line-height: 5px;
-  color: #ffffff;
+  fill: #ffffff;
   border-radius: 50%;
   background-color: #e1e1e1;
   vertical-align: middle;
 }
 
-.social-vk {
-  background-image: url("../img/vk-icon.svg");
-  background-position: center;
-  background-repeat: no-repeat;
+.social-vk svg {
+  position: relative;
+  top: 32px;
+  left: 27px;
 }
 
-.social-fb {
-  background-image: url("../img/fb-icon.svg");
-  background-position: center;
-  background-repeat: no-repeat;
+.social-fb svg {
+  position: relative;
+  top: 28px;
+  left: 34px;
 }
 
-.social-in {
-  background-image: url("../img/insta-icon.svg");
-  background-position: center;
-  background-repeat: no-repeat;
+.social-in svg {
+  position: relative;
+  top: 29px;
+  left: 29px;
 }
 
 .social:hover {
-  color: #ffffff;
+  fill: #ffffff;
   background-color: #e74246;
 }
 
 .social:active {
-  color: #e37376;
+  fill: #e37376;
   background-color: #d7373b;
-  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 3px rgba(0, 0, 0, 0.1);
 }
 
 .container-cataloge {
   display: flex;
   justify-content: space-between;
+  padding-top: 59px;
   padding-bottom: 57px;
 }
 
@@ -894,19 +888,16 @@ h1.caption {
   margin-bottom: 42px;
 }
 
-.grid-list {
-  padding-left: 36px;
-}
-
-.grid-item,
-.capabilities-item {
-  position: relative;
+.grid-item {
   margin-bottom: 16px;
 }
 
-.grid-item label,
-.capabilities-item label {
-  position: relative;
+.capabilities-item {
+  margin-bottom: 13px;
+}
+
+.grid-item label {
+  display: flex;
   cursor: pointer;
 }
 
@@ -917,12 +908,9 @@ h1.caption {
 
 .grid-item label::before {
   content: "";
-  position: absolute;
-  top: -2;
-  left: -35px;
-  z-index: 1;
   width: 25px;
   height: 25px;
+  margin-right: 10px;
   background-image: url(../img/radio-off.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -933,9 +921,6 @@ h1.caption {
 
 .grid-item input[type="radio"]:checked ~ label::before {
   content: "";
-  position: absolute;
-  top: 0;
-  left: -35px;
   width: 25px;
   height: 25px;
   background-image: url(../img/radio-on.svg);
@@ -945,18 +930,19 @@ h1.caption {
 }
 
 .capabilities-list {
-  margin-bottom: 49px;
-  padding-left: 36px;
+  margin-bottom: 47px;
+}
+
+.capabilities-item label {
+    display: flex;
+  cursor: pointer;
 }
 
 .capabilities-item label::before {
   content: "";
-  position: absolute;
-  top: 0;
-  left: -35px;
-  z-index: 1;
   width: 23px;
-  height: 23px;
+  height: 27px;
+  margin-right: 12px;
   background-image: url(../img/checkbox-off.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -966,11 +952,10 @@ h1.caption {
 }
 
 .capabilities-item input[type="checkbox"]:checked ~ label::before {
-  position: absolute;
-  top: 0;
-  left: -35px;
+  content: "";
   width: 27px;
   height: 27px;
+  margin-right: 8px;
   background-image: url(../img/checkbox-on.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -1008,6 +993,10 @@ h1.caption {
   margin-bottom: 13px;
 }
 
+.capabilities b {
+  margin-bottom: 12px;
+}
+
 .fofm-lateral {
   display: block;
 }
@@ -1035,7 +1024,7 @@ h1.caption {
 .link-show:active {
   color: #a9a9a9;
   background-color: #d5d5d5;
-  box-shadow: 0 2px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .container-item-sorting p {
@@ -1050,7 +1039,7 @@ h1.caption {
   display: flex;
   justify-content: space-between;
   width: 360px;
-  margin-top: 0;
+  margin: 0;
   margin-bottom: 16px;
   padding: 0;
   font-size: 14px;
@@ -1067,11 +1056,11 @@ h1.caption {
   color: #cacaca;
 }
 
-.sorting-link:hover {
+.sorting-link[href]:hover {
   color: #8d8d8d;
 }
 
-.sorting-link:active {
+.sorting-link[href]:active {
   color: #000000;
 }
 
@@ -1090,6 +1079,7 @@ h1.caption {
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0.2;
+  cursor: pointer;
 }
 
 .sorting-down {
@@ -1102,15 +1092,7 @@ h1.caption {
   background-position: center;
   background-repeat: no-repeat;
   opacity: 1;
-}
-
-.sorting-link:hover {
-  color: #000000;
-  opacity: 0.5;
-}
-
-.sorting-link:active {
-  color: #a6a6a6;
+  cursor: pointer;
 }
 
 .sorting-up:hover {
@@ -1123,28 +1105,27 @@ h1.caption {
   opacity: 1;
 }
 
-.sorting-down:hover {
-  color: #a6a6a6;
-  opacity: 0.5;
-}
-
-.sorting-down:active {
-  opacity: 1;
-}
-
 .services {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
-  margin-bottom: 22px;
+  margin-bottom: 25px;
   padding: 0;
   list-style: none;
 }
 
 .services-list {
   display: block;
-  margin-bottom: 34px;
+  margin-bottom: 33px;
+}
+
+.services-list:hover .information {
+  display: block
+}
+
+.services-list:hover .points {
+  opacity: 0.7;
 }
 
 .information {
@@ -1165,7 +1146,6 @@ h1.caption {
 
 .services-item:hover {
   display: block;
-  opacity: 1;
   box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -1176,6 +1156,10 @@ h1.caption {
   background-position: top;
   background-repeat: no-repeat;
   opacity: 0.1;
+}
+
+.points-browser  {
+  opacity: 0.7;
 }
 
 .information h2 {
@@ -1204,13 +1188,16 @@ h1.caption {
 
 .information a {
   display: block;
-  width: 80px;
+  width: 180px;
   margin: 0 auto;
-  padding: 13px 60px;
+  padding: 13px 10px;
   text-align: center;
-  border-radius: 3px;
+  border-radius: 2px;
 }
 
+.information:hover {
+  display: block;
+}
 
 .link-cataloge {
   color: #ffffff;
@@ -1232,18 +1219,17 @@ h1.caption {
   align-items: center;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", "Arial", sans-serif;
+  font: inherit;
 }
 
 .pages-list a {
   display: inline-block;
-  min-width: 20px;
-  height: 40px;
-  padding: 5px 15px;
+  width: 50px;
+  height: 50px;
   margin-right: 9px;
   text-align: center;
   vertical-align: middle;
-  line-height: 42px;
+  line-height: 50px;
   text-decoration: none;
   font-weight: 700;
   color: #000000;
@@ -1252,7 +1238,8 @@ h1.caption {
 }
 
 .pages-list .pages-next {
-  padding: 5px 78px;
+  width: 240px;
+  padding: 0 10px;
   text-transform: uppercase;
 }
 
@@ -1270,7 +1257,7 @@ h1.caption {
 .pages-list a[href]:active {
   color: #a9a9a9;
   background-color: #d5d5d5;
-  box-shadow: 0 2px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: inset 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .modal-window {
@@ -1282,11 +1269,12 @@ h1.caption {
 }
 
 .modal-window-login {
-  bottom: 12%;
-  left: 10%;
+  top: 50%;
+  left: 50%;
   width: 760px;
   padding: 70px 100px 80px;
   z-index: 9999;
+  transform: translate(-480px, -300px);
 }
 
 .modal-close {
@@ -1382,8 +1370,8 @@ h1.caption {
 }
 
 .modal-window-login .link-send {
-  display: block;
-  padding: 15px 82px;
+  width: 258px;
+  padding: 15px 10px;
   border-radius: 2px;
   border: 1px solid #fb565a;
 }
