--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ img {
 }
 
 .head {
-  font-size-adjust: 24px;
+  font-size: 24px;
   line-height: 30px;
   font-weight: bold;
 }
@@ -176,12 +176,6 @@ img {
   background-image: url("../img/cart-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
-  opacity: 0.3;
-}
-
-.basket:hover::before,
-.basket:focus::before,
-.basket:active::before {
   opacity: 0.3;
 }
 
@@ -339,10 +333,6 @@ img {
   list-style: none;
 }
 
-.features-item {
-  width: 300px;
-}
-
 .features-item h3 {
   margin: 0;
   margin-top: 27px;
@@ -359,7 +349,9 @@ img {
   line-height: 24px;
 }
 
-.features-item-red {
+.features-item-red::before {
+  display: block;
+  content: "";
   width: 300px;
   height: 146px;
   background-image: url("../img/illustration-1.png");
@@ -367,17 +359,23 @@ img {
   background-repeat: no-repeat;
 }
 
-.features-item-green {
+.features-item-green::before {
+  display: block;
+  content: "";
   width: 300px;
   height: 146px;
+  content: "";
   background-image: url("../img/illustration-2.png");
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.features-item-yellow {
+.features-item-yellow::before {
+  display: block;
+  content: "";
   width: 300px;
   height: 146px;
+  content: "";
   background-image: url("../img/illustration-3.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -439,6 +437,7 @@ img {
 }
 
 .description-list {
+  width: 650px;
   margin-top: 76px;
 }
 
@@ -481,7 +480,9 @@ img {
   width: 360px;
 }
 
-.logo-galery {
+.logo-galery::before {
+  display: block;
+  content: "";
   width: 360px;
   height: 208px;
   margin-bottom: 37px;
@@ -551,8 +552,8 @@ img {
   display: flex;
   padding-bottom: 12px;
   font-size: 45px;
-  font-family: "Roboto", "Arial", sans-serif;
-  font-weight: bold;
+  line-height: 45px;
+  font-weight: 700;
   line-height: 50px;
   color: #000000;
 }
@@ -572,9 +573,11 @@ img {
   list-style: none;
 }
 
-.logo-link-one img{
+.logo-link-one {
+  display: flex;
+  margin: auto;
   width: 199px;
-  height: 68;
+  height: 68px;
   padding: 62px 30px 50px;
 }
 
@@ -587,13 +590,15 @@ img {
 }
 
 .logo-link {
-  display: block;
-  margin: auto;
+  display: flex;
+  margin: 0;
   opacity: 0.2;
 }
 
 .logo-link img {
   display: block;
+  width: 260px;
+  height: 180px;
   margin: auto;
 }
 
@@ -646,7 +651,7 @@ iframe {
   z-index: 9999;
 }
 
-.modal .modal-contacts h2 {
+.modal-contacts h2 {
   margin-bottom: 23px;
   font-size: 18px;
   line-height: 30px;
@@ -654,11 +659,12 @@ iframe {
 }
 
 .modal-contacts p {
+  width: 201px;
   font-size: 16px;
   line-height: 18px;
 }
 
-.modal-contacts a.link-modal {
+.modal-contacts a {
   display: block;
   width: 199px;
   padding: 13px 10px;
@@ -795,9 +801,13 @@ h1.caption {
   width: 260px;
 }
 
+.filter-item .tagline {
+  margin-bottom: 0;
+}
+
 .range-filter {
   width: 260px;
-  margin-top: 49px;
+  margin-top: 44px;
 }
 
 .filter-item legend {
@@ -866,14 +876,14 @@ h1.caption {
 
 .price-controls input {
   width: 60px;
-  padding: 10px 10px;
+  padding: 7px 10px;
   margin-left: 10px;
-  font-family: "Roboto", "Arial", sans-serif;
+  font: inherit;
   font-size: 16px;
   text-align: center;
   color: #283136;
   border: none;
-  border-radius: 5px;
+  border-radius: 2px;
   background: #f1f1f1;
 }
 
@@ -916,8 +926,6 @@ h1.caption {
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0.4;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-in-out;
 }
 
 .grid-item input[type="radio"]:checked ~ label::before {
@@ -935,7 +943,7 @@ h1.caption {
 }
 
 .capabilities-item label {
-    display: flex;
+  display: flex;
   cursor: pointer;
 }
 
@@ -994,10 +1002,6 @@ h1.caption {
 
 .capabilities b {
   margin-bottom: 12px;
-}
-
-.fofm-lateral {
-  display: block;
 }
 
 .container-item {
@@ -1158,23 +1162,13 @@ h1.caption {
   opacity: 0.1;
 }
 
-.points-browser {
-  opacity: 0.7;
-}
-
 .information h2 {
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
-  text-transform: uppercase;
-  color: #000000;
-}
-
-.information h2 {
   margin: 0;
-  font-size: 18px;
-  line-height: 30px;
-  color: #000000;
+  text-transform: uppercase;
+
 }
 
 .information p {
@@ -1193,14 +1187,14 @@ h1.caption {
   padding: 13px 10px;
   text-align: center;
   border-radius: 2px;
+  color: #000000;
 }
 
 .information:hover {
   display: block;
 }
 
-
-.link-cataloge {
+.information .link-cataloge {
   color: #ffffff;
   background-color: #fb565a;
 }
@@ -1288,7 +1282,7 @@ h1.caption {
   width: 22px;
   height: 22px;
   background-color: #ffffff;
-  background-image: url(../img/close-cross.svg);
+  background-image: url("../img/close-cross.svg");
   border: none;
   cursor: pointer;
   opacity: 0.3;
