--- a/css/main.css
+++ b/css/main.css
@@ -349,11 +349,14 @@ img {
   line-height: 24px;
 }
 
+.features-item::before {
+  width: 300px;
+  height: 146px;
+}
+
 .features-item-red::before {
   display: block;
   content: "";
-  width: 300px;
-  height: 146px;
   background-image: url("../img/illustration-1.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -362,8 +365,6 @@ img {
 .features-item-green::before {
   display: block;
   content: "";
-  width: 300px;
-  height: 146px;
   content: "";
   background-image: url("../img/illustration-2.png");
   background-position: center;
@@ -373,8 +374,6 @@ img {
 .features-item-yellow::before {
   display: block;
   content: "";
-  width: 300px;
-  height: 146px;
   content: "";
   background-image: url("../img/illustration-3.png");
   background-position: center;
@@ -453,7 +452,7 @@ img {
 .description-list p {
   flex-wrap: wrap;
   margin-bottom: 39px;
-  font-size 16px;
+  font-size: 16px;
   line-height: 24px;
 }
 
@@ -600,6 +599,11 @@ img {
   width: 260px;
   height: 180px;
   margin: auto;
+}
+
+.logo-link-one img {
+  width: 199px;
+  height: 68px;
 }
 
 .logo-link:hover {
@@ -922,7 +926,7 @@ h1.caption {
   width: 25px;
   height: 25px;
   margin-right: 10px;
-  background-image: url(../img/radio-off.svg);
+  background-image: url("../img/radio-off.svg");
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0.4;
@@ -1381,6 +1385,14 @@ h1.caption {
 .modal-error {
   animation: shake 0.6s;
   animation: bounce 0.6s;
+}
+
+.iframe-list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 415px;
 }
 
 @keyframes bounce {
