--- a/css/main.css
+++ b/css/main.css
@@ -713,6 +713,7 @@ img {
   position: relative;
   display: block;
   height: 415px;
+  background-color: #e7e6d7;
   background-image: url("../img/maps.jpg");
   background-position: center;
   background-repeat: no-repeat;
